fixing pkce validation
